src/objects/Doc2File_Log__c.object
<CustomObject>
    <description>Represents results from converting Document Folders to Content Libraries. Records are created and updated by Apex batch jobs.</description>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>The Batchable or Queueable Job ID when this error occurred.</description>
        <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Time__c</fullName>
        <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the &quot;date&quot; portion and not the &quot;time&quot;. This formula field is workaround to to view the &quot;date&quot; and &quot;time&quot; together.</description>
        <formula>CreatedDate</formula>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_File_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the new File ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the new File ID.</inlineHelpText>
        <label>New File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Document_ID__c</fullName>
        <description>If the log message is about a specific conversion issue with a record then this is the original Document ID.</description>
        <inlineHelpText>If the log message is about a specific conversion issue with a record then this is the original Document ID.</inlineHelpText>
        <label>Old Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the status of log message, whether a document was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</description>
        <inlineHelpText>Indicates the status of log message, whether a document was successfully converted or perhaps that it was skipped during conversion or that it failed conversion. The API values match conversion result enum value in apex code.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONVERTED</fullName>
                    <default>true</default>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>SKIPPED</fullName>
                    <label>Skipped</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Doc2File Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Job_ID__c</columns>
        <columns>Old_Document_ID__c</columns>
        <columns>New_File_ID__c</columns>
        <columns>Summary__c</columns>
        <columns>Log_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc2File Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>